# opensees-parametric-analysis

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  Prototipo1.ipynb  README.md  codecov.yml  create_model.py  ejemplos_refactorizado.py  pyproject.toml  pytest.ini  requirements.txt  run_parametric_study.py  run_single_analysis.py  test_refactored_engine.py  verify_types.py
.opstool.output/: ModelData-1.nc  RespStepData-1.nc
docs/: FUTURE_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  NUEVO_PLAN_REFACTORIZACION_ANALYSIS_ENGINE.md  PIPELINE_VERIFICATION_MODEL_BUILDER_ANALYSIS_ENGINE.md  REFACTORING_COMPLETED.md  analysis-engine-refactoring-plan.md  architecture.md  guia_importaciones_simple.md  import_guide.md  index.md  installation.md  model-parameters.md  new-architecture.md  system-requirements.md  testing.md  troubleshooting.md  usage.md  visualization.md
examples/: 01_analisis_individual_basico.py  02_control_visualizacion.py  03_tipos_analisis.py  04_estudio_parametrico.py  05_exportacion_scripts.py  06_generacion_reportes.py  README.md  debug_transf_tag.py  ejemplo_completo_debug.py  ejemplo_json_simple.py  ejemplo_model_builder.py  ejemplo_multiple.py  ejemplo_python_exporter.py  new_architecture_demo.py  test_json_structure.py  test_output_dir.py  test_python_exporter_v2.py
extra/: proposed_structure.md
notebooks/: 00_verificacion_instalacion.ipynb  01_crear_modelos.ipynb  02_analizar_modelo_individual.ipynb  03_analisis_parametrico_completo.ipynb  04_generar_reportes.ipynb  fix_imports_test.ipynb
scripts/: compare_architectures.py  install.sh  migration_test.py  release.py  verify_installation.py
src/: __init__.py  analysis_engine.py  model_builder.py  model_builder_v2.py  parametric_runner.py  python_exporter.py  python_exporter_v2.py  report_generator.py
tests/: demo_serialization.py  run_all_tests.py  simple_test.py  test_analysis_engine.py  test_analysis_types.py  test_clean_structure.py  test_generated_code_validation.py  test_material_implementation.py  (+7 more)
(+37 files in other folders)
