[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opensees-parametric-analysis"
version = "1.0.0"
authors = [
    {name = "GJoe2", email = "tu-email@ejemplo.com"},
]
description = "Sistema completo de análisis paramétrico para estructuras de hormigón armado usando OpenSees"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]
keywords = ["opensees", "structural-analysis", "parametric-analysis", "concrete", "civil-engineering"]

dependencies = [
    "openseespy>=3.4.0",
    "opstool>=0.0.1",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.5.0",
    "plotly>=5.0.0",
    "seaborn>=0.11.0",
    "jupyter>=1.0.0",
    "ipywidgets>=7.6.0",
    "tqdm>=4.62.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

[project.urls]
Homepage = "https://github.com/GJoe2/opensees-parametric-analysis"
Documentation = "https://github.com/GJoe2/opensees-parametric-analysis/tree/master/docs"
Repository = "https://github.com/GJoe2/opensees-parametric-analysis.git"
Issues = "https://github.com/GJoe2/opensees-parametric-analysis/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-dir]
"" = "."
"opensees_parametric_analysis" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
